--- a/src/components/VrxNavbar/VrxNavbar.mdx
+++ b/src/components/VrxNavbar/VrxNavbar.mdx
@@ -12,40 +12,49 @@ import {VrxNavbar} from 'vireoxlibrary';
 
 <VrxNavbar buttons="[ ... ]"  />
 ```
-La props ```buttons``` deve essere un array di oggetti di tipo ```NavbarButton```. Di seguito le interfacce da utilizzare durante lo sviluppo della configurazione della navbar.
+La props ```buttons``` deve essere un array ```[]`` di oggetti di tipo ```NavbarButton```. Di seguito le interfacce da utilizzare durante lo sviluppo della configurazione della navbar.
 
 ```NavbarButton```
 Bottone principale della navbar.
 
-```
-interface NavbarButton {
-    text: string;
-    icon?: IconLibraryType;
-    component?: ComponentInterface;
-    selected: boolean;
-    children?: NavbarFirstLayerButton[];
+```js
+type NavbarButton = {
+    text: string;                               // Testo del bottone
+    icon: IconLibraryType;                      // [opzionale] Icona del bottone
+    component: ComponentInterface;              // [opzionale] Componente da inserire nel bottone
+    children: FirstLayerButton[];               // [opzionale] Sotto-bottoni del bottone
 }
 ```
 
 ```NavbarFirstLayerButton```
 Sotto-bottone figlio di un bottone principale. A sua volta può contenere un altro livello di sotto-bottoni.
 
+```js
+type NavbarSecondLayerButton = {
+    text: string;                               // Testo del bottone
+    description: string;                        // [opzionale] Descrizione del bottone
+    icon: IconLibraryType;                      // [opzionale] Icona del bottone
+    component: ComponentInterface;              // [opzionale] Componente da inserire nel bottone
+    children: SecondLayerButton[];              // [opzionale] Sotto-bottoni del bottone
+}
 ```
-NavbarFirstLayerButton {
-    text: string;
-    description?: string;
-    icon?: IconLibraryType;
-    component?: ComponentInterface;
-    children?: NavbarButton[];
+
+```NavbarSecondLayerButton```
+Sotto-bottone figlio di un FirstLayerButton. Ultimo layer di bottoni.
+
+```js
+type NavbarSecondLayerButton = {
+    text: string;                               // Testo del bottone
+    component: ComponentInterface;              // [opzionale] Componente da inserire nel bottone
 }
 ```
 
 ```ComponentInterface```
 Componente (pensato principalmente per il routing) da inserire all'interno di un bottone della navbar. Per visualizzare il testo e la descrizione del bottone, il componente passato **necessita** di uno ```slot```.
 Consigliato l'utilizzo di ```<NuxtLink> </NuxtLink>``` o ```<router-link to="/"> </router-link>``` per il routing.
-```
+```js
 interface ComponentInterface {
-    component: Component;
-    props?: any;
+    component: Component;                       // Oggetto componente da inserire nel bottone
+    props: any;                                 // [opzionale] Oggetto con le props da passare al componente
 }
 ```
