--- a/src/components/VrxIcon/VrxIcon.mdx
+++ b/src/components/VrxIcon/VrxIcon.mdx
@@ -6,6 +6,9 @@ import {Meta,  IconGallery, IconItem} from "@storybook/blocks";
 
 VireoxIcon è un il componente principale per l'utilizzo di icone.
 
+Esso contiene già alcune icone di default, ma è possibile aggiungerne di nuove tramite l'utilizzo del path dell'SVG. Le icone incluse sono consultabili attraverso
+la [documentazione](./?path=/docs/vrxicon--docs).
+
 Per utilizzarlo, importare il componente e utilizzarlo come segue:
 ```js
 import {VrxIcon} from 'vireoxlibrary';
@@ -13,7 +16,7 @@ import {VrxIcon} from 'vireoxlibrary';
 <VrxIcon icon={'mail'} />
 
 ```
-La lista di icone disponibili è consultabile [qui](https://materialdesignicons.com/).
+La lista di icone utilizzate è consultabile [qui](https://materialdesignicons.com/).
 
 
 Per dettagli sulle API e le configurazioni leggere la [documentazione](./?path=/docs/vrxicon--docs)
