--- a/src/components/VrxButton/VrxButton.mdx
+++ b/src/components/VrxButton/VrxButton.mdx
@@ -4,9 +4,9 @@ import {Meta} from "@storybook/blocks";
 
 # VireoxButton
 
-VireoxButton è un semplice bottone altamente personalizzabile
+VireoxButton is a simple, highly customizable button.
 
-Per utilizzarlo, importare il componente e utilizzarlo come segue:
+To use it, import the component and use it as follows:
 ```js
 import {VrxButton} from 'vireoxlibrary';
 
@@ -15,7 +15,7 @@ import {VrxButton} from 'vireoxlibrary';
 </VrxButton>
 ```
 
-È possibile utilizzare gli eventi handler di VueJS per gestire gli eventi del bottone:
+You can use VueJS event handlers to handle button events:
 
 ```js
 import {VrxButton} from 'vireoxlibrary';
@@ -25,4 +25,4 @@ import {VrxButton} from 'vireoxlibrary';
 </VrxButton>
 ```
 
-Per dettagli sulle API e le configurazioni leggere la [documentazione](./?path=/docs/vrxbutton--docs)
+For API's details and configuration please read the [documentation](./?path=/docs/vrxbutton--docs)
