--- a/src/components/VrxButtonsGroup/VrxButtonsGroup.mdx
+++ b/src/components/VrxButtonsGroup/VrxButtonsGroup.mdx
@@ -4,9 +4,10 @@ import {Meta} from "@storybook/blocks";
 
 # VireoxButtonsGroup
 
-VireoxButtonsGroup è un componente che permette di ragruppare più bottoni.
+VireoxButtonsGroup is a component that allows you to group multiple buttons together.
 
-Per utilizzarlo, importare il componente e utilizzarlo come segue:
+To use it, import the component and use it as follows:
+
 ```js
 import { VrxButtonsGroup } from 'vireoxlibrary';
 
@@ -16,4 +17,4 @@ import { VrxButtonsGroup } from 'vireoxlibrary';
 />
 ```
 
-Per dettagli sulle API e le configurazioni leggere la [documentazione](./?path=/docs/vrxbuttonsgroup--docs)
+For API's details and configuration please read the [documentation](./?path=/docs/vrxbuttonsgroup--docs)
