--- a/src/components/VrxInput/VrxInput.mdx
+++ b/src/components/VrxInput/VrxInput.mdx
@@ -4,10 +4,11 @@ import {Meta} from "@storybook/blocks";
 
 # VireoxInput
 
-VireoxInput è il componente base per l'inserimento di input.
+VireoxInput is the base component for input fields.
 
-Il componente utilizza il 100% della larghezza disponibile e aggiorna automaticamente al cambio dell'input la variabile associata.
-Per utilizzarlo, importarlo come segue:
+The component utilizes 100% of the available width and automatically updates the associated variable when the input changes.
+
+To use it, import the component as follows:
 ```js
 import {VrxInput} from 'vireoxlibrary';
 
@@ -15,4 +16,4 @@ const value = ref('')
 <VrxInput v-model="value"/>
 ```
 
-Per dettagli sulle API e le configurazioni leggere la [documentazione](./?path=/docs/vrxinput--docs)
+For API's details and configuration please read the [documentation](./?path=/docs/vrxinput--docs)
