--- a/src/components/VrxSelect/VrxSelect.mdx
+++ b/src/components/VrxSelect/VrxSelect.mdx
@@ -4,10 +4,9 @@ import {Meta} from "@storybook/blocks";
 
 # VireoxSelect
 
-VireoxSelect è il componente input di base per la selezione singola e per quella multipla.
+VireoxSelect is the basic input component for single and multiple selection. The component utilizes 100% of the available width.
 
-Il componente utilizza il 100% della larghezza disponibile.
-Per utilizzarlo, importarlo come segue:
+To use it, import it as follows:
 ```js
 import {VrxSelect} from 'vireoxlibrary';
 
@@ -20,4 +19,4 @@ const data : SelectItemInterface[] = [
 <VrxSelect v-model="value" :list-data="data"/>
 ```
 
-Per dettagli sulle API e le configurazioni leggere la [documentazione](./?path=/docs/vrxselect--docs)
+For API's details and configuration please read the [documentation](./?path=/docs/vrxselect--docs)
