--- a/src/components/VrxToggle/VrxToggle.mdx
+++ b/src/components/VrxToggle/VrxToggle.mdx
@@ -4,9 +4,9 @@ import {Meta} from "@storybook/blocks";
 
 # VireoxToggle
 
-VireoxToggle è il componente alternativo alle classiche checkbox.
+VireoxToggle is the alternative component to the traditional checkboxes.
 
-Per utilizzarlo, importarlo come segue:
+To use it, import it as follows:
 ```js
 import {VrxToggle} from 'vireoxlibrary';
 
@@ -14,4 +14,4 @@ const value = ref(false);
 <VrxToggle v-model="value" />
 ```
 
-Per dettagli sulle API e le configurazioni leggere la [documentazione](./?path=/docs/vrxtoggle--docs)
+For API's details and configuration please read the [documentation](./?path=/docs/vrxtoggle--docs)
