--- a/src/components/VrxGrid/VrxGrid.mdx
+++ b/src/components/VrxGrid/VrxGrid.mdx
@@ -179,13 +179,13 @@ The following custom events are emitted by the component and can be used with ``
     <tr>
         <td>@cell-double-clicked</td>
         <td>-</td>
-        <td>any</td>
+        <td>`{id: string | number, value: any}`</td>
         <td>Returns the content of the double-clicked cell</td>
     </tr>
     <tr>
         <td>@cell-clicked</td>
         <td>-</td>
-        <td>any</td>
+        <td>`{id: string | number, value: any}`</td>
         <td>Returns the content of the clicked cell</td>
     </tr>
     <tr>
